kustomize-mock-psp/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mock-psp-dev
  name: mock-psp-dev
